# praktika

./: chat-summary.md
basic1/: README.md  basic1-answers.md
basic3/: README.md  review-prep.md
basic4/: README.md  konspekt.md  otvety.md
basic5/: README.md  final-checklist.txt
reports_work/: PM02_PP_template.docx  PM02_UP_ideal.docx  PM11_ideal.docx  fill_practice_report.py  fill_practice_report_v2_preserve_layout.py  final_basic_report.docx  final_basic_report_resaved.docx  final_basic_report_v2.docx  inspection_summary.json  ~$nal_basic_report.docx
reports_work/inspection/: PM02_PP_template_structure.txt  PM02_UP_ideal_structure.txt  PM11_ideal_structure.txt  instruction_text.txt
todo_app/: .gitignore  README.md  check.ps1  run.ps1  run.sh
todo_app/app/archtool_conf/: bundle_project.py  custom_layers.py
todo_app/app/todos/: controllers.py  interfaces.py  repos.py  services.py
todo_app/app/users/: controllers.py  interfaces.py  repos.py  services.py
todo_app/entrypoints/: run.py
todo_app/scripts/: curl_demo.sh  run_curl_check.sh  smoke_test.py
todo_app_hints/: pyproject.toml
todo_app_hints/app/: config.py
todo_app_hints/app/archtool_conf/: bundle_project.py  custom_layers.py
todo_app_hints/app/todos/: controllers.py  interfaces.py  models.py  repos.py  services.py
todo_app_hints/app/users/: controllers.py  interfaces.py  models.py  repos.py  services.py
todo_app_hints/entrypoints/: run.py
