[project]
name = "todo-app-basic2"
version = "0.1.0"
description = "BASIC-2 ToDo API on archtool + web_fractal + FastAPI + async SQLAlchemy"
requires-python = ">=3.12,<3.14"
dependencies = [
    "archtool>=2.1.1",
    "web_fractal>=0.0.1",
    "fastapi>=0.110",
    "httpx2>=0.28",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "aiohttp>=3.9",
    "furl>=2.1",
    "pytz>=2024.1",
    "pydantic>=2.0",
    "email-validator>=2.0",
]

[tool.uv]
package = false
